--- a/style.css
+++ b/style.css
@@ -1,1 +1,135 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+body, h1, h2, h3, h4, h5, h6, p, ul, li {
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    font-family: Source Sans Pro;
+  }
+  
+  
+  .newspaper-container {
+    position: relative; 
+    width: 700px;
+    margin: 0 auto; 
+    background-color: #f5f5f5;
+    padding: 20px;
+    box-shadow: 0 0 10px #7c6b6b(0, 0, 0, 5); 
+    border-radius: 15px;
+}
+  
+  
+  header {
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: Abril Fatface;
+  }
+  
+  .date {
+    font-family: Abril Fatface;
+    font-size: 14px;
+    color: #888;
+    position: absolute;
+    top: 10px; 
+    left: 10px; 
+    color: #888;
+  }
+  
+  h1 {
+    font-size: 24px;
+    margin-top: 5px;
+  }
+  
+  
+  nav {
+    margin-bottom: 20px;
+    color:#777;
+    border-top: 1px solid #ddd; 
+    border-bottom: 1px solid #ddd;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+  }
+  
+  li {
+    display: inline-block;
+    margin-right: 10px;
+    padding: 5px;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  
+  /* Main article styles */
+  main {
+    text-align: center;
+    font-family: Roboto Slab;
+  }
+  
+  h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 6px;
+    text-align: left;
+  }
+  
+  h5 {
+    font-size: 16px;
+    color: #cc0000;
+    margin-top: 0;
+    margin-bottom: 20px;
+    top: 0; 
+    left: 0; 
+    text-align: left;
+
+
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  p {
+    justify-content: space-between;
+    font-size: 14px;
+    line-height: 1.5;
+    margin: 5;
+    padding: 18px;
+    text-align: left;
+  }
+  
+ 
+  .more-articles {
+    border-top: 1px solid #ddd;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  section {
+    flex: 0 0 48%;
+  }
+  
+  h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  
+ 
+  .more-articles img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
